<resources>
    <string name="app_name">Nutrition Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="browse">Browse</string>
    <string name="filter">Filter</string>
    <string name="stats">Statistics</string>
    <string name="plan">Plan</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_asc">Sort ASC</string>
    <string name="sort_desc">Sort DESC</string>
    <string name="all_meals">All Meals</string>
    <string name="saved_meals">Saved Meals</string>
    <string name="select_date">Select date:</string>
    <string name="select_meal">Select meal of the day:</string>
    <string name="date">01 JAN 2023</string>
    <string name="categories">Categories</string>
    <string name="areas">Areas</string>
    <string name="ingredients">Ingredients</string>
    <string name="stats_7_days">Meals saved in the last seven days:</string>
    <string name="pick_a_day">Pick a day for the plan:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="review">Review Plan</string>
    <string name="pick_meals">Pick meals for the periods of the day:</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="choose">Choose</string>
    <string name="your_plan">Your plan:</string>
    <string name="send_to_email">Enter email to send plan to:</string>
    <string name="send">Send</string>
</resources>