<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SearchView
        android:id="@+id/filterSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/buttonSort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAreas" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterRV"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterSearch" />

    <Button
        android:id="@+id/buttonCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/categories"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAreas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/areas"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/buttonIngrs"
        app:layout_constraintStart_toEndOf="@+id/buttonCategories"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonIngrs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/ingredients"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/buttonSort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textOff="@string/sort_asc"
        android:textOn="@string/sort_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonIngrs"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngrs" />

</androidx.constraintlayout.widget.ConstraintLayout>