<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginLayoutCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCV"
        android:layout_width="0dp"
        android:layout_height="539dp"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@color/dark_gray"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/fieldUsername"
                android:layout_width="293dp"
                android:layout_height="57dp"
                android:layout_marginTop="144dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="227dp"
                android:layout_height="57dp"
                android:layout_marginTop="144dp"
                android:backgroundTint="@color/green"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textColorLink="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fieldPassword" />

            <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="293dp"
                android:layout_height="57dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fieldUsername" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginCV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>